# bods-xml

./: LICENSE  README.md  pyproject.toml
src/bods_xml/: __init__.py  canonical.py  cli.py
src/bods_xml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bods_xml/profiles/: __init__.py  mras.py
tests/: test_canonical.py  test_conformance.py  test_mras_profile.py
tests/fixtures/bods_json/: bc_scenario_1.json  cc_scenario_1.json  cc_scenario_2.json  qc_scenario_2_entity_bo.json  qc_scenario_5_exempt.json
