[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bods-xml"
version = "0.1.0"
description = "Convert Beneficial Ownership Data Standard (BODS) 0.4 JSON to XML"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Stephen Abbott Pugh", email = "stephendabbott@gmail.com"},
]
dependencies = [
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
bods-xml = "bods_xml.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
